--- a/apps/ng-board/project.json
+++ b/apps/ng-board/project.json
@@ -8,15 +8,25 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/ng-board",
         "index": "apps/ng-board/src/index.html",
         "main": "apps/ng-board/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/ng-board/tsconfig.app.json",
-        "assets": ["apps/ng-board/src/favicon.ico", "apps/ng-board/src/assets"],
-        "styles": ["apps/ng-board/src/styles.scss"],
+        "assets": [
+          "apps/ng-board/src/favicon.ico",
+          "apps/ng-board/src/assets"
+        ],
+        "styles": [
+          "@angular/material/prebuilt-themes/deeppurple-amber.css",
+          "apps/ng-board/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -66,14 +76,21 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/ng-board/**/*.ts", "apps/ng-board/**/*.html"]
+        "lintFilePatterns": [
+          "apps/ng-board/**/*.ts",
+          "apps/ng-board/**/*.html"
+        ]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/ng-board/jest.config.ts",
         "passWithNoTests": true
