--- a/package.json
+++ b/package.json
@@ -2,18 +2,34 @@
   "name": "@ng-board/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "concurrently --kill-others \"nx serve ng-board\" \"nx serve api\" \"npx prisma studio\""
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.2.0",
+    "@angular/cdk": "~16.2.2",
     "@angular/common": "~16.2.0",
     "@angular/compiler": "~16.2.0",
     "@angular/core": "~16.2.0",
     "@angular/forms": "~16.2.0",
+    "@angular/material": "~16.2.2",
     "@angular/platform-browser": "~16.2.0",
     "@angular/platform-browser-dynamic": "~16.2.0",
     "@angular/router": "~16.2.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
     "@nx/angular": "16.7.4",
+    "@prisma/client": "^5.2.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/passport-local": "^1.0.35",
+    "axios": "^1.0.0",
+    "bcrypt": "^5.1.1",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -28,24 +44,36 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "~16.2.0",
     "@angular/language-service": "~16.2.0",
+    "@angular/material": "^16.2.2",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.1",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/swagger": "^7.1.10",
+    "@nestjs/testing": "^10.0.2",
     "@nx/cypress": "16.7.4",
     "@nx/eslint-plugin": "16.7.4",
     "@nx/jest": "16.7.4",
     "@nx/js": "16.7.4",
     "@nx/linter": "16.7.4",
+    "@nx/nest": "^16.7.4",
+    "@nx/node": "16.7.4",
     "@nx/web": "16.7.4",
+    "@nx/webpack": "16.7.4",
     "@nx/workspace": "16.7.4",
     "@schematics/angular": "~16.2.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "16.11.7",
+    "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "class-validator": "^0.14.0",
+    "concurrently": "^8.2.1",
     "cypress": "^12.16.0",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
     "nx": "16.7.4",
     "nx-cloud": "latest",
