--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@ng-board/auth": ["libs/auth/src/index.ts"],
+      "@ng-board/board-ui": ["libs/board-ui/src/index.ts"],
+      "@ng-board/prisma-manager": ["libs/prisma-manager/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
